# sipcord-bridge

./: .dockerignore  .env.example  .gitmodules  Cargo.toml  Dockerfile  README.md  todo
.github/workflows/: publish-ghcr.yml
pjsua/: Cargo.toml  build.rs
pjsua/src/: lib.rs
sipcord-bridge/: Cargo.toml
sipcord-bridge/src/: config.rs  error.rs  lib.rs  main.rs
sipcord-bridge/src/audio/: mod.rs
sipcord-bridge/src/call/: mod.rs
sipcord-bridge/src/fax/: mod.rs  spandsp.rs  tiff_decoder.rs
sipcord-bridge/src/routing/: mod.rs  static_router.rs
sipcord-bridge/src/services/: snowflake.rs
sipcord-bridge/src/services/sound/: mod.rs  streaming.rs
sipcord-bridge/src/transport/discord/: mod.rs  voice.rs
sipcord-bridge/src/transport/sip/: audio_thread.rs  callbacks.rs  error.rs  mod.rs  register_handler.rs
sipcord-bridge/src/transport/sip/ffi/: direct_player.rs  init.rs  pj_str.rs  types.rs  utils.rs
